--- a/myapp/views/index.pug
+++ b/myapp/views/index.pug
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}. Hello, world!
-  p This is a test of the express framework.
+  p Continue on Tuesday.
