--- a/myapp/views/tram-eta-all.pug
+++ b/myapp/views/tram-eta-all.pug
@@ -5,22 +5,25 @@ block content
     h2 Tram ETAs
     each stop, stop_code in data
       h3 
-        a(href="/#{stop.en_name}") Stop #{stop_code} (#{stop.en_name})
+        a(href=stop_code+"/") Stop #{stop_code} (#{stop.en_name})
       p Chinese: #{stop.tc_name}
-      //ETA Table Starts
-      table(class="table")
-        tr
+      if stop.eta.length
+        //ETA Table Starts
+        table(class="table")
+          tr
           th #
           th Dest.
           th Tram No.
           th ETA
-        each eta_item, index in stop.eta
-          tr
-            td #{index}
-            td #{eta_item.tram_dest_en} (#{eta_item.dest_stop_code})
-            td ##{eta_item.tram_id}
-            if eta_item.is_arrived
-              td Arrived (#{eta_item.arrive_in_second} s)
-            else
-              td #{eta_item.arrive_in_minute}mins (#{eta_item.arrive_in_second}s)
-      //ETA Table Ends
+          each eta_item, index in stop.eta
+            tr
+              td #{index}
+              td #{eta_item.tram_dest_en} (#{eta_item.dest_stop_code})
+              td ##{eta_item.tram_id}
+              if eta_item.is_arrived
+                td Arrived (#{eta_item.arrive_in_second} s)
+              else
+                td #{eta_item.arrive_in_minute}mins (#{eta_item.arrive_in_second}s)
+        //ETA Table Ends
+      else
+        p Sorry, no ETA data.
