--- a/myapp/views/main/tram_data_searchbox.ejs
+++ b/myapp/views/main/tram_data_searchbox.ejs
@@ -1,3 +1,24 @@
+<%
+function section(compare){
+	if (typeof params === "undefined"){
+		return "";
+	}else{
+		return (params.stopA+"/"+params.stopB == compare) ? " selected" : "";
+	}
+}
+function query2(_query, compare){
+	if (typeof query !== "undefined"){
+		if (typeof query[_query] !== "undefined"){
+			return (query[_query] == compare) ? " selected" : "";
+		}else{
+			return "";
+		}
+	}else{
+		return "";
+	}
+}
+
+%>
 <div class="panel panel-default">
 	<div class="panel-heading"><b>Search for Raw Data</b></div>
 	<div class="panel-body">
@@ -10,8 +31,7 @@
 						<select class="form-control" id="section">
 							<option value="">-- Please select --</option>
 							<% for (var i in searchbox.sections){ %>
-							<% var selected = (params.stopA+"/"+params.stopB == searchbox.sections[i].from_to) ? " selected" : ""; %>
-							<option value = "<%= searchbox.sections[i].from_to %>"<%= selected %>><%= searchbox.sections[i].caption %></option>
+							<option value = "<%= searchbox.sections[i].from_to %>"<%= section(searchbox.sections[i].from_to) %>><%= searchbox.sections[i].caption %></option>
 							<% } %>
 						</select>
 					</div>
@@ -21,8 +41,7 @@
 						<select class="form-control" id="sort">
 							<option value="">No sorting</option>
 							<% for (var i in searchbox.sortby){ %>
-							<% var selected = (query.sortby == i) ? " selected" : ""; %>
-							<option value = "<%= i %>"<%= selected %>><%= searchbox.sortby[i].name %></option>
+							<option value = "<%= i %>"<%= query2("sortby", i) %>><%= searchbox.sortby[i].name %></option>
 							<% } %>
 						</select>
 					</div>
@@ -33,10 +52,8 @@
 					<div class="col-sm-9 col-lg-4">
 						<select class="form-control" id="wkday">
 							<option value="">Not filtered</option>
-							<% var selected = (query.wkday == 1) ? " selected" : ""; %>
-							<option value="1"<%= selected %>>Weekdays only</option>
-							<% var selected = (query.wkday == 0) ? " selected" : ""; %>
-							<option value="0"<%= selected %>>Non-weekdays only</option>
+							<option value="1"<%= query2("wkday", 1) %>>Weekdays only</option>
+							<option value="0"<%= query2("wkday", 0) %>>Non-weekdays only</option>
 						</select>
 					</div>
 					<%# Filter: DOW %>
@@ -44,20 +61,13 @@
 					<div class="col-sm-9 col-lg-4">
 						<select class="form-control" id="dow">
 							<option value="">Not filtered</option>
-							<% var selected = (query.dow == 0) ? " selected" : ""; %>
-							<option value="0"<%= selected %>>Sundays</option>
-							<% var selected = (query.dow == 1) ? " selected" : ""; %>
-							<option value="1"<%= selected %>>Mondays</option>
-							<% var selected = (query.dow == 2) ? " selected" : ""; %>
-							<option value="2"<%= selected %>>Tuesdays</option>
-							<% var selected = (query.dow == 3) ? " selected" : ""; %>
-							<option value="3"<%= selected %>>Wednesdays</option>
-							<% var selected = (query.dow == 4) ? " selected" : ""; %>
-							<option value="4"<%= selected %>>Thursdays</option>
-							<% var selected = (query.dow == 5) ? " selected" : ""; %>
-							<option value="5"<%= selected %>>Fridays</option>
-							<% var selected = (query.dow == 6) ? " selected" : ""; %>
-							<option value="6"<%= selected %>>Saturdays</option>
+							<option value="0"<%= query2("dow", 0) %>>Sundays</option>
+							<option value="1"<%= query2("dow", 1) %>>Mondays</option>
+							<option value="2"<%= query2("dow", 2) %>>Tuesdays</option>
+							<option value="3"<%= query2("dow", 3) %>>Wednesdays</option>
+							<option value="4"<%= query2("dow", 4) %>>Thursdays</option>
+							<option value="5"<%= query2("dow", 5) %>>Fridays</option>
+							<option value="6"<%= query2("dow", 6) %>>Saturdays</option>
 						</select>
 					</div>
 					<%# Filter: Date %>
@@ -112,8 +122,10 @@
 		}
 	}
 	//Prefill data
-	<% if(query.date_gt != null){ %> $("#date_gt").val("<%= query.date_gt %>"); <% } %>
-	<% if(query.date_lt != null){ %> $("#date_lt").val("<%= query.date_lt %>"); <% } %>
-	<% if(query.hours_gt != null){ %> $("#time_gt").val("<%= query.hours_gt %>"); <% } %>
-	<% if(query.hours_lt != null){ %> $("#time_lt").val("<%= query.hours_lt %>"); <% } %>
+	<% if(typeof query !== "undefined"){ %>
+		<% if(typeof query.date_gt !== "undefined"){ %> $("#date_gt").val("<%= query.date_gt %>"); <% } %>
+		<% if(typeof query.date_lt !== "undefined"){ %> $("#date_lt").val("<%= query.date_lt %>"); <% } %>
+		<% if(typeof query.hours_gt !== "undefined"){ %> $("#time_gt").val("<%= query.hours_gt %>"); <% } %>
+		<% if(typeof query.hours_lt !== "undefined"){ %> $("#time_lt").val("<%= query.hours_lt %>"); <% } %>
+	<% } %>
 </script>
