--- a/myapp/views/main/header.ejs
+++ b/myapp/views/main/header.ejs
@@ -28,7 +28,8 @@
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Trams
 							<span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="/trams/data">Raw Data</a></li>
+									<li><a href="/trams/data">Raw Data</a></li>
+									<li><a href="/trams/data_regr">Prediction with Existing Data</a></li>
 							</ul>
 						</li>
 						<%# Menu End -------------------------------------------------------- %>
