--- a/myapp/views/main/tram_regr_data.ejs
+++ b/myapp/views/main/tram_regr_data.ejs
@@ -81,10 +81,20 @@
 								<% if (result[i].prediction_2d[mode] == ""){ %>
 								<td>N/A</td>
 								<% }else{ %>
-								<td>
+								<%
+								var url = "/trams/pred_sect/" + params.stopA + "/" + params.stopB
+								+ "?dayOfWk=" + result[i].dayOfWk
+								+ "&PH=" + (result[i].PH ? "1" : "0")
+								+ "&hours=" + result[i].hours
+								+ "&rainfall=" + result[i].rainfall
+								+ "&HKO_temp=" + (typeof result[i].HKO_temp !== "undefined" ? result[i].HKO_temp : "") 
+								+ "&HKO_hum=" + (typeof result[i].HKO_hum !== "undefined" ? result[i].HKO_hum : "")
+								+ "#" + mode;
+								%>
+								<td><a href = "<%= url %>">
 									<%= result[i].prediction_2d[mode] %>′<br/>
 									<small>(<%= result[i].prediction_error_2d[mode] %>')</small>
-								</td>
+								</a></td>
 								<% } %>
 							<% } %>
 						</tr>
