--- a/myapp/views/main/tram_pred_sect_querybox.ejs
+++ b/myapp/views/main/tram_pred_sect_querybox.ejs
@@ -52,10 +52,7 @@ function s(variable){
 				hours = "";
 			}
 			//Valid
-			var URL = "/trams/pred"
-			+ "/" + $("#from").val()
-			+ "/" + $("#to").val()
-			+ "/" + $("#multi").val()
+			var URL = "/trams/pred_sect/" + $("#section").val()
 			+ "?dayOfWk=" + $("#dayOfWk").val()
 			+ "&PH=" + $("#PH").val()
 			+ "&hours=" + hours
@@ -82,24 +79,14 @@ function s(variable){
 			<div class="form-group">
 				<div class="row">
 
-					<%# From %>
-					<label class="control-label col-sm-3 col-lg-2" for="from">From:</label>
+					<%# Section %>
+					<label class="control-label col-sm-3 col-lg-2" for="section">Select section:</label>
 					<div class="col-sm-9 col-lg-10">
-						<select class="form-control" id="from">
-						</select>
-					</div>
-
-					<%# To %>
-					<label class="control-label col-sm-3 col-lg-2" for="to">From:</label>
-					<div class="col-sm-9 col-lg-10">
-						<select class="form-control" id="to">
-						</select>
-					</div>
-
-					<%# Multi %>
-					<label class="control-label col-sm-3 col-lg-2" for="multi">From:</label>
-					<div class="col-sm-9 col-lg-10">
-						<select class="form-control" id="multi">
+						<select class="form-control" id="section">
+							<option value="">-- Please select --</option>
+							<% for (var i in querybox.sections){ %>
+							<option value = "<%= querybox.sections[i].from_to %>"<%= section(querybox.sections[i].from_to) %>><%= querybox.sections[i].caption %></option>
+							<% } %>
 						</select>
 					</div>
 
