--- a/myapp/views/main/header.ejs
+++ b/myapp/views/main/header.ejs
@@ -28,9 +28,9 @@
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Trams
 							<span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="/trams/pred">Travelling Time Prediction</a></li>
-								<li><a href="/trams/pred_sect">Travelling Time Prediction of a Section</a></li>
-								<li><a href="/trams/data_regr">Travelling Time Prediction with Existing Data</a></li>
+								<li><a href="/trams/prediction">Travelling Time Prediction</a></li>
+								<li><a href="/trams/prediction_section">Travelling Time Prediction of a Section</a></li>
+								<li><a href="/trams/data_regression">Travelling Time Prediction with Existing Data</a></li>
 								<li><a href="/trams/data">View Raw Data</a></li>
 							</ul>
 						</li>
