--- a/myapp/views/main/tram_pred_sect_querybox.ejs
+++ b/myapp/views/main/tram_pred_sect_querybox.ejs
@@ -52,7 +52,7 @@ function s(variable){
 				hours = "";
 			}
 			//Valid
-			var URL = "/trams/pred_sect/" + $("#section").val()
+			var URL = "/trams/prediction_section/" + $("#section").val()
 			+ "?dayOfWk=" + $("#dayOfWk").val()
 			+ "&PH=" + $("#PH").val()
 			+ "&hours=" + hours
