--- a/myapp/views/main/tram_pred.ejs
+++ b/myapp/views/main/tram_pred.ejs
@@ -4,7 +4,7 @@
 	<style>
 		.table td {text-align: center;}
 		.table th {text-align: center;}
-		.table {font-size:1.2em;}
+		.table {font-size:1em;}
 	</style>
 
 	<% if (typeof params !== "undefined"){ %>
@@ -74,7 +74,7 @@
 												<td><%= result.via[i+1].name %> <small>(<%= result.via[i+1].code %>)</small></td>
 												<td><%= result.sections[i].arrivalTime_hhmm[mode] %></td>
 												<td>
-													<a href = "/trams/prediction_section/<%=result.via[i].code%>/<%=result.via[i+1].code%>?<%=url_q%>">
+													<a href="/trams/prediction_section/<%=result.via[i].code%>/<%=result.via[i+1].code%>?<%=url_q%>#<%=mode%>" target="_blank">
 														<small>(Details)</small></small>
 													</a>
 												</td>
