--- a/myapp/views/main/index.ejs
+++ b/myapp/views/main/index.ejs
@@ -1,3 +1,4 @@
 <%- include('header'); %>
-	<p>Hello, world!</p>
+	<h3>Trams: Predict Travelling Time</h3>
+	<%- include('tram_pred_querybox'); %>
 <%- include('footer'); %>
