--- a/myapp/views/main/tram_data_searchbox.ejs
+++ b/myapp/views/main/tram_data_searchbox.ejs
@@ -9,7 +9,7 @@ function section(compare){
 
 %>
 <div class="panel panel-default">
-	<div class="panel-heading"><b><%= title %></b></div>
+	<div class="panel-heading"><b>Trams: <%= title %></b></div>
 	<div class="panel-body">
 		<form>
 			<div class="form-group">
