--- a/myapp/views/main/tram_pred_sect_querybox.ejs
+++ b/myapp/views/main/tram_pred_sect_querybox.ejs
@@ -73,7 +73,7 @@ function s(variable){
 </script>
 
 <div class="panel panel-default">
-	<div class="panel-heading"><b><%= title %></b></div>
+	<div class="panel-heading"><b>Trams: Travelling Time Prediction of a Section</b></div>
 	<div class="panel-body">
 		<form>
 			<div class="form-group">
